# cpp_sw_dev

./: README.md
src/000_compiler_opt_levels/: compiler_opt.cpp
src/001_compilation_phases/: hello_world.cpp
src/002_header_files/: main.cpp  print.cpp  print.h
src/003_header_guards/: main.cpp  s1.h  s2.h
src/004_inline_variables/: function.cpp  function.h  global.h  main.cpp
src/005_clang_format/: main.cpp
src/006_linking/: main.cpp
src/007_static_library/: add.cpp  main.cpp  multiply.cpp
src/009_valgrind/: 0_error.cpp  1_error.cpp  2_error.cpp  3_error.cpp  4_error.cpp
src/010_address_sanitizer/: 0_error.cpp  1_error.cpp  3_error.cpp
src/011_gdb/: 1_error.cpp
src/012_watchpoints/: 0_error.cpp  1_error.cpp
src/013_tui/: 0_error.cpp
src/014_rr/: 0_error.cpp
src/015_make/0_make/: Makefile
src/015_make/1_make/: Makefile
src/015_make/2_make/: Makefile  add.cpp  print_add.cpp
src/016_make_clean/0_make/: Makefile  print_add.cpp
src/016_make_clean/1_make/: Makefile  add.h
src/017_recursive_make/0_make/: Makefile
src/017_recursive_make/0_make/float_math/: Makefile  add.cpp  add.h  main.cpp  multiply.cpp
src/017_recursive_make/0_make/int_math/: add.cpp  (+1 more)
src/017_recursive_make/1_make/: Makefile
src/018_cmake/0_cmake/: CMakeLists.txt
src/018_cmake/1_cmake/: CMakeLists.txt  hello_world.cpp
src/019_cmake_library/0_cmake/: CMakeLists.txt  multiply.h
src/019_cmake_library/1_cmake/: CMakeLists.txt  threads.cpp
src/019_cmake_library/2_cmake/: CMakeLists.txt  clamp_bench.cpp
src/020_recursive_cmake/: CMakeLists.txt
src/020_recursive_cmake/main/: CMakeLists.txt  main.cpp
src/020_recursive_cmake/math/: CMakeLists.txt
(+5 files in other folders)
